# github-action-watch

./: .gitignore  README.md  app.py  pyproject.toml
static/css/: style.css
templates/: base.html  dashboard.html  installations.html  manifest_redirect.html  setup.html
